--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>USB</title>
+    <head>
+        <meta charset="UTF-8" />
+        <title>USB</title>
 
-		<link rel="shortcut icon" href="./favicon.ico" />
-		<link rel="stylesheet" href="styles.css" />
-	</head>
-	<body a link="white" vlink="white">
-		<div class="container">
-			<p>
-				USB | <a href="http://localhost/webmin">WEBMIN</a>
-				<a href="shell.html">OWNCLOUD</a>
-			</p>
-		</div>
-	</body>
+        <link rel="shortcut icon" href="./favicon.ico" />
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body a link="white" vlink="white">
+        <div class="container">
+            <p>
+                USB |
+                <a
+                    href="javascript:alert('This function is not finished yet,');"
+                    >WEBMIN (WIP)</a
+                >
+                <a href="owncloud/index.php">OWNCLOUD</a>
+            </p>
+        </div>
+    </body>
 </html>
